name:                olkartet
version:             0.1.0.0
synopsis:            Queryable list of pubs in Oslo
description:         Please see README.md
homepage:            http://github.com/githubuser/ølkartet#readme
license:             MIT
license-file:        LICENSE
author:              Vincent Ambo
maintainer:          tazjin@gmail.com
copyright:           2016 Vincent Ambo
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pubs, API, Client
  build-depends:       base >= 4.7 && < 5,
                       data-default,
                       text,
                       either,
                       postgresql-simple,
                       transformers,
                       aeson,
                       lens,
                       servant,
                       servant-server,
                       servant-client,
                       servant-docs
  default-language:    Haskell2010

executable olkartet-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , olkartet
                     , servant-server
                     , servant-jquery
                     , text
                     , transformers
                     , postgresql-simple
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite olkartet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , olkartet
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ølkartet
